# scip-multithread

./: .dockerignore  .gdbinit  .gitignore  CMakeLists.txt  ISSUE_2.md  README.md
.github/workflows/: docker.yml  linux.yml  macos.yml  windows.yml
Foo/: CMakeLists.txt
Foo/src/: main.cpp
ci/: Makefile
ci/doc/: docker.dot
ci/docker/alpine/: Dockerfile
ci/docker/archlinux/: Dockerfile
ci/docker/centos/: Dockerfile
ci/docker/debian/: Dockerfile
ci/docker/fedora/: Dockerfile
ci/docker/opensuse/: Dockerfile
ci/docker/ubuntu/: Dockerfile
cmake/: MultiThreadConfig.cmake.in
